<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Book">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.005"
            app:srcCompat="@drawable/backarrow" />


        <!--        <TextView-->
<!--            android:id="@+id/city"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:importantForAccessibility="yes"-->
<!--            android:text="Mangaluru"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.61"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--            app:layout_constraintVertical_bias="0.022" />-->

        <TextView
            android:id="@+id/textView2"

            android:layout_width="289dp"
            android:layout_height="42dp"
            android:layout_marginStart="14dp"
            android:gravity="center"
            android:text="@string/show_name"
            android:textColor="@color/Autumn_White"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="yes"
            android:text="@string/pvr_location"
            android:textColor="@color/Firmament_Blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.037" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/filterstext"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.084" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/filterstext"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.047" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wantedSeats"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.008" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="112dp"
            android:layout_height="95dp"
            android:contentDescription="@string/success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.267"
            app:srcCompat="@drawable/booking" />

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="709dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat1"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat2"
                    android:textSize="20sp"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat3"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat4"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat5"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat6"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat7"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat8"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat9"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/seat10"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="379dp"
                android:layout_height="564dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="304dp"
                    android:layout_height="65dp"
                    android:gravity="center"
                    android:text="@string/seatSelection"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="264dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="28dp"
                    android:gravity="end"
                    android:text="@string/available"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rbVIP"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/vipRate"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txVIP"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_textview"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/vipSeats"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rbPlatinum"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/platinumRate"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txPlatinum"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_textview"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/platinumSeats"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rbGold"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/goldRate"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txGold"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_textview"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/goldSeats"
                        android:textSize="18sp"
                        android:checked="true"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rbSilver"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/silverRate"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txSilver"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_textview"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/silverSeats"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rbSpecial"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/specialRate"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txSpecial"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_textview"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/specialSeats"
                        android:textSize="20sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="342dp"
                    android:layout_height="75dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:text="@string/total"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/txTotal"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_margin="30dp"
                        android:background="@drawable/border_background"
                        android:gravity="center"
                        android:text="@string/specialSeats"
                        android:textSize="29sp" />
                </LinearLayout>


                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="331dp"
                    android:layout_height="71dp"
                    android:backgroundTint="@color/Firmament_Blue"
                    android:text="@string/confirm"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
