<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".SignUp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        android:backgroundTint="@color/Atomic_Orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Autumn_White">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/background"
                android:backgroundTint="@color/Autumn_White" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signupText"
                android:textColor="#90FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/buttonHolder"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="215dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_background_new"
        android:backgroundTint="@color/water_blue"
        android:gravity="center_vertical"
        android:padding="0dp"
     >

        <Button

            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="62dp"
            android:text="@string/logIn"
            android:background="@android:color/transparent"
            android:textColor="@color/black"

            />
        <Button
            android:id="@+id/signup"
            android:layout_width="150dp"
            android:layout_height="62dp"
            android:text="@string/signUp"
            android:textColor="@color/Autumn_White"
            android:backgroundTint="@color/Rust"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"

        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signUp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- EditText for First Name -->

        <!-- EditText for Last Name -->

<!--        <EditText-->
<!--            android:id="@+id/FullName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="10dp"-->
<!--            android:autofillHints="name"-->
<!--            android:background="@drawable/custom_edittext"-->
<!--            android:hint="@string/name"-->
<!--            android:inputType="textPersonName"-->
<!--            android:padding="15dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHighlight="@color/cardview_dark_background" />-->

        <EditText
            android:id="@+id/usrName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@drawable/custom_edittext"
            android:hint="@string/usrName"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <!-- EditText for Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />
        <!-- EditText for Email -->
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_phone_24"
            android:drawablePadding="8dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <!-- EditText for Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_password_24"

            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <!-- EditText for Confirm Password -->
        <EditText
            android:id="@+id/ConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_password_24"

            android:drawablePadding="8dp"
            android:hint="@string/confirmPwd"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/Rust"
            android:padding="15dp"
            android:text="@string/signUp"
            android:textColor="@color/Autumn_White"
            android:textSize="18sp" />

        <!-- Signup Text -->
<!--        <TextView-->
<!--            android:id="@+id/signupText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginBottom="40dp"-->
<!--            android:padding="8dp"-->
<!--            android:text="@string/registered"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16sp" />-->

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
